--- a/src/app/assets/style/Home.module.css
+++ b/src/app/assets/style/Home.module.css
@@ -2,3 +2,13 @@
     padding-inline: 100px;
     padding-top: 120px;
 }
+.swiperSlide{
+    width: 100%;
+    height: 700px;
+}
+.swiperSlideImage{
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    
+}
