navbar routing when clicked to main logo

--- a/src/app/assets/style/Navbar.module.css
+++ b/src/app/assets/style/Navbar.module.css
@@ -18,7 +18,7 @@
 .navigationBarTitle{
     display: flex;
     column-gap: 10px;
-  
+    cursor: pointer;
 }
 .navigationBarTitleMain{
     font-size: 40px;
